# kaggle-competitions

./: pyproject.toml
playground-series-s3e17/: s3e17.db  s3e17.ipynb  test.py
spaceship-titanic/: spaceship-titanic.ipynb
