[tool.poetry]
name = "kaggle-competitions"
version = "0.1.0"
description = "My kaggle competitions"
authors = ["Nicholas Tran <nickptran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
kaggle = "^1.5.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
