[tool.poetry]
name = "kaggle-competitions"
version = "0.1.0"
description = "My kaggle competitions"
authors = ["Nicholas Tran <nickptran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
kaggle = "^1.5.13"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
xgboost = "^1.7.5"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
category-encoders = "^2.6.1"
optuna = "^3.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
